--- a/pom.xml
+++ b/pom.xml
@@ -8,13 +8,7 @@
 	<name>simplejsf Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 
-	<!-- <repositories>
-		<repository>
-			<id>maven2-repository.dev.java.net</id>
-			<name>Java.net Repository for Maven</name>
-			<url>http://download.java.net/maven/2</url>
-		</repository>
-	</repositories>  -->
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -23,12 +17,16 @@
 			<scope>test</scope>
 		</dependency>
 
-
 		<dependency>
 			<groupId>javax.faces</groupId>
 			<artifactId>jsf-api</artifactId>
-			<version>2.0</version>
-			<scope>provided</scope>
+			<version>2.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.sun.faces</groupId>
+			<artifactId>jsf-impl</artifactId>
+			<version>2.1.10</version>
 		</dependency>
 	</dependencies>
 	<build>
