--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
 	<name>simplejsf Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 
 	<dependencies>
 		<dependency>
@@ -17,17 +22,11 @@
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>javax.faces</groupId>
-			<artifactId>jsf-api</artifactId>
-			<version>2.1</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.sun.faces</groupId>
-			<artifactId>jsf-impl</artifactId>
-			<version>2.1.10</version>
-		</dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>jakarta.faces</artifactId>
+            <version>2.3.21</version>
+        </dependency>
 	</dependencies>
 	<build>
 		<finalName>simplejsf</finalName>
